--- a/styles/global.css
+++ b/styles/global.css
@@ -31,3 +31,26 @@ a
     color: inherit;
     text-decoration: none;
 }
+
+button
+{
+    font-size: 12px;
+    font-weight: 500;
+    color: white;
+    padding: 14px 0;
+    letter-spacing: 2px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    cursor: pointer;
+}
+
+button .fa-sharp
+{
+    color: inherit;
+}
+
+nav .fa-sharp
+{
+    color: white;
+    display: none;
+}
