--- a/styles/global.css
+++ b/styles/global.css
@@ -82,6 +82,24 @@ button:hover
     margin-left: 40px;
 }
 
+.section-title
+{
+    font-size: 40px;
+    font-weight: 700;
+    color: black;
+    margin-top: -30px;
+    margin-bottom: 14px;
+}
+
+hr
+{
+    background: #ea4020;
+    height: 2px;
+    width: 70px;
+    border: none;
+    margin-bottom: 30px;
+}
+
 nav .fa-sharp
 {
     color: white;
