--- a/styles/about.css
+++ b/styles/about.css
@@ -6,11 +6,11 @@
 
 .about .container
 {
-    height: 700px;
     width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 150px 0;
     margin: auto;
 }
 
@@ -18,9 +18,7 @@
 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding-bottom: 55px;
 }
 
 .about .container p
