--- a/styles/global.css
+++ b/styles/global.css
@@ -92,16 +92,63 @@ nav .fa-sharp
     display: none;
 }
 
-/* media queries */
-@media(max-width: 700px)
+/* Media Queries */
+@media(max-width: 800px)
 {
+    /* Global */
+    .about .container,
+    .skills .container,
+    .projects .container
+    {
+        padding: 100px 0 !important;
+    }
+
+    h1
+    {
+        font-size: 36px;
+    }
+
+    /* Header */
+    .nav-menu
+    {
+        height: 100vh;
+        width: 180px;
+        font-size: 30px;
+        position: absolute;
+        background: rgb(76, 76, 76);
+        top: 0;
+        right: -200px;
+        text-align: left !important;
+        transition: 0.8s;
+    }
+
+    .nav-menu ul
+    {
+        padding: 30px;
+        text-align: center;
+    }
+
+    .nav-menu ul li
+    {
+        display: block;
+    }
+
+    nav .fa-sharp
+    {
+        font-size: 24px;
+        display: block;
+        margin: 10px 0 10px 14px;
+        cursor: pointer;
+    }
+
+    /* Home */
     .home img,
     .name-tag
     {
         display: none;
     }
 
-    .home .left-container
+    .home .container
     {
         text-align: center;
     }
@@ -125,35 +172,53 @@ nav .fa-sharp
         margin-right: 12px !important;
     }
 
-    .nav-menu
+    /* About */
+    .about .container img
     {
-        height: 100vh;
-        width: 180px;
-        font-size: 30px;
-        position: absolute;
-        background: rgb(76, 76, 76);
-        top: 0;
-        right: -200px;
-        text-align: left !important;
-        transition: 1s;
+        display: none;
     }
 
-    .nav-menu ul
+    .about .container p
     {
-        padding: 30px;
-        text-align: center;
+        width: 90%;
     }
 
-    .nav-menu ul li
+    /* Skills */
+    .skills .skill-icon-container
     {
-        display: block;
+        display: flex !important;
+        flex-direction: column;
     }
 
-    nav .fa-sharp
+    .skills .skill-icon-container div
     {
-        font-size: 24px;
-        display: block;
-        margin: 10px 0 10px 14px;
-        cursor: pointer;
+        width: 234px !important;
+    }
+
+    /* Projects */
+    .project-container
+    {
+        flex-direction: column;
+    }
+
+    .project-container img
+    {
+        width: 68% !important;
+        border-radius: 20px;
+    }
+
+    .project-container img:hover
+    {
+        margin: 0 !important;
+    }
+
+    .project-descr-container
+    {
+        margin: 46px 0 20px 0;
+    }
+
+    .project-descr-container p
+    {
+        width: 80%;
     }
 }
