--- a/styles/skills.css
+++ b/styles/skills.css
@@ -5,7 +5,7 @@
     position: relative;
 }
 
-.skills .container
+.skills .section-container
 {
     width: 80%;
     display: flex;
@@ -30,15 +30,15 @@
     background-color: white;
     color: rgb(82, 82, 82);
     padding: 40px 60px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
     transition: 0.3s;
 }
 
 .skills .skill-icon-container div:hover
 {
-    margin: -10px 0 10px 0;
     opacity: 0.7;
+    margin: -10px 0 10px 0;
 }
 
 .skills .skill-icon-container div p
