style: modify the global css styling

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,15 +1,13 @@
 *
 {
+    font-family: 'poppins', sans-serif;
     margin: 0;
     padding: 0;
-    font-family: 'poppins', sans-serif;
     box-sizing: border-box;
 }
 
 html, body
 {
-    height: 100%; 
-    width: 100%;
     overflow-x: hidden;
     scroll-snap-type: y proximity;
     scroll-behavior: smooth;
@@ -18,12 +16,6 @@ html, body
 ul
 {
     list-style: none;
-}
-
-img
-{
-    height: auto;
-    max-width: 100%;
 }
 
 a
@@ -35,13 +27,13 @@ a
 button
 {
     font-size: 12px;
-    font-weight: 500;
     color: white;
-    padding: 14px 0;
+    font-weight: 500;
     letter-spacing: 2px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
     transition: 0.3s;
+    padding: 14px 0;
     cursor: pointer;
 }
 
@@ -72,8 +64,8 @@ button:hover
 .section-title
 {
     font-size: 40px;
-    font-weight: 700;
     color: black;
+    font-weight: 700;
     margin-bottom: 14px;
 }
 
@@ -105,7 +97,7 @@ nav .fa-sharp
 
     h1
     {
-        font-size: 36px;
+        font-size: 34px !important;
     }
 
     /* Header */
@@ -114,8 +106,8 @@ nav .fa-sharp
         height: 100vh;
         width: 180px;
         font-size: 30px;
-        position: absolute;
         background: rgb(76, 76, 76);
+        position: absolute;
         top: 0;
         right: -200px;
         text-align: left !important;
@@ -124,8 +116,8 @@ nav .fa-sharp
 
     .nav-menu ul
     {
-        padding: 30px;
         text-align: center;
+        padding: 30px;
     }
 
     .nav-menu ul li
@@ -148,7 +140,7 @@ nav .fa-sharp
         display: none;
     }
 
-    .home .container
+    .home .section-container
     {
         text-align: center;
     }
@@ -173,12 +165,12 @@ nav .fa-sharp
     }
 
     /* About */
-    .about .container img
+    .about .section-container img
     {
         display: none;
     }
 
-    .about .container p
+    .about .section-container p
     {
         width: 90%;
     }
@@ -192,7 +184,7 @@ nav .fa-sharp
 
     .skills .skill-icon-container div
     {
-        width: 234px !important;
+        width: 240px !important;
     }
 
     /* Projects */
