--- a/styles/global.css
+++ b/styles/global.css
@@ -104,25 +104,27 @@ nav .fa-sharp
     .nav-menu
     {
         height: 100vh;
-        width: 180px;
+        width: 200px;
         font-size: 30px;
-        background: rgb(76, 76, 76);
+        background-color: hsla(0, 0%, 10%, 0.3);
         position: absolute;
         top: 0;
         right: -200px;
         text-align: left !important;
+        backdrop-filter: blur(70px);
+        -webkit-backdrop-filter: blur(70px);
         transition: 0.8s;
     }
 
     .nav-menu ul
     {
-        text-align: center;
         padding: 30px;
     }
 
     .nav-menu ul li
     {
-        display: block;
+        font-weight: 500;
+        letter-spacing: 2px;
     }
 
     nav .fa-sharp
