--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,9 @@
 *
 {
-    font-family: 'poppins', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
 html, body
@@ -105,7 +105,7 @@ nav .fa-sharp
     {
         height: 100vh;
         width: 200px;
-        font-size: 30px;
+        font-size: 40px;
         background-color: hsla(0, 0%, 10%, 0.3);
         position: absolute;
         top: 0;
@@ -113,7 +113,7 @@ nav .fa-sharp
         text-align: left !important;
         backdrop-filter: blur(70px);
         -webkit-backdrop-filter: blur(70px);
-        transition: 0.8s;
+        transition: 0.6s;
     }
 
     .nav-menu ul
@@ -124,14 +124,15 @@ nav .fa-sharp
     .nav-menu ul li
     {
         font-weight: 500;
-        letter-spacing: 2px;
+        letter-spacing: 3px;
     }
 
     nav .fa-sharp
     {
         font-size: 24px;
         display: block;
-        margin: 10px 0 10px 14px;
+        text-align: right;
+        margin: 18px 20px;
         cursor: pointer;
     }
 
