--- a/styles/footer.css
+++ b/styles/footer.css
@@ -11,17 +11,17 @@
     justify-content: space-between;
     align-items: center;
     background-color: black;
-    padding: 1% 6%;
+    padding: 26px 6%;
 }
 
 .footer .name-heading
 {
-    font-size: 26px;
+    font-size: 24px;
 }
 
 .footer .role-heading
 {
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
 }
 
