--- a/styles/footer.css
+++ b/styles/footer.css
@@ -16,7 +16,8 @@
 
 .footer .name-heading
 {
-    font-size: 24px;
+    font-size: 23px;
+    padding-bottom: 8px;
 }
 
 .footer .role-heading
@@ -25,7 +26,7 @@
     margin: 0;
 }
 
-.copyright-message
+.copyright-notice
 {
     font-size: 14px;
 }
