--- a/styles/query.css
+++ b/styles/query.css
@@ -135,6 +135,7 @@
     {
         flex-direction: column;
         text-align: center;
+        padding: 10% 6%;
     }
 
     .footer .section-container div
@@ -152,7 +153,7 @@
         font-size: 17px !important;
     }
 
-    .copyright-message
+    .copyright-notice
     {
         max-width: 70%;
     }
