--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,10 @@
 .header
 {
     width: 100%;
-    background-color: black;
     position: fixed;
     top: 0;
     z-index: 100;
+    transition: 0.3s ease-in-out;
 }
 
 nav
@@ -28,30 +28,33 @@ nav
     color: rgb(30, 215, 96);
 }
 
-.nav-menu
+/* .nav-menu
 {
-    flex: 1;
-    text-align: right;
-}
+    /* flex: 1; */
+    /* text-align: right;
+} */
 
 .nav-menu ul li
 {
+    color: white;
+    font-size: 16px;
+    letter-spacing: 1px;
     display: inline-block;
     position: relative;
     padding: 8px 12px;
 }
 
-.nav-menu ul li a
+/* .nav-menu ul li a
 {
-    font-size: 15px;
+    font-size: 16px;
     color: white;
     letter-spacing: 1px;
-}
+} */
 
 .nav-menu ul li::after
 {
-    width: 0;
     height: 2px;
+    width: 0;
     background: rgb(22, 164, 72);
     display: block;
     content: "";
@@ -62,4 +65,16 @@ nav
 .nav-menu ul li:hover::after
 {
     width: 100%;
+}
+
+header.scrolled
+{
+    background-color: white;
+    opacity: 0.98;
+}
+
+header.scrolled .nav-logo,
+header.scrolled .nav-menu ul li
+{
+    color: black;
 }
