--- a/styles/query.css
+++ b/styles/query.css
@@ -19,13 +19,13 @@
         height: 100vh;
         width: 200px;
         font-size: 40px;
-        background-color: hsla(0, 0%, 10%, 0.3);
+        background-color: rgba(32,33,37,255);
         position: absolute;
         top: 0;
         right: -200px;
-        text-align: left !important;
-        backdrop-filter: blur(70px);
-        -webkit-backdrop-filter: blur(70px);
+        /* text-align: left !important; */
+        /* backdrop-filter: blur(70px);
+        -webkit-backdrop-filter: blur(70px); */
         transition: 0.6s;
     }
 
@@ -47,6 +47,16 @@
         text-align: right;
         margin: 18px 20px;
         cursor: pointer;
+    }
+
+    header.scrolled .nav-menu ul li
+    {
+        color: white;
+    }
+
+    header.scrolled #show-menu-icon
+    {
+        color: black;
     }
 
     /* Home */
