--- a/styles/query.css
+++ b/styles/query.css
@@ -1,11 +1,11 @@
 @media(max-width: 800px)
 {
     /* Global */
-    .about .container,
-    .skills .container,
-    .projects .container
+    .about .section-container,
+    .skills .section-container,
+    .contact .section-container
     {
-        padding: 100px 0 !important;
+        padding: 70px 0;
     }
 
     .section-title
@@ -23,21 +23,12 @@
         position: absolute;
         top: 0;
         right: -200px;
-        /* text-align: left !important; */
-        /* backdrop-filter: blur(70px);
-        -webkit-backdrop-filter: blur(70px); */
         transition: 0.6s;
     }
 
     .nav-menu ul
     {
         padding: 30px;
-    }
-
-    .nav-menu ul li
-    {
-        font-weight: 500;
-        letter-spacing: 3px;
     }
 
     nav .fa-sharp
@@ -114,6 +105,12 @@
     }
 
     /* Projects */
+    .projects .section-container
+    {
+        padding-top: 70px;
+        padding-bottom: 0px;
+    }
+    
     .project-container
     {
         flex-direction: column;
@@ -189,4 +186,94 @@
     {
         max-width: 71%;
     }
+}
+
+@media(max-width: 400px)
+{
+    /* Global */
+    .about .section-container,
+    .skills .section-container,
+    .contact .section-container
+    {
+        padding: 70px 0;
+    }
+
+    .section-title
+    {
+        font-size: 29px !important;
+    }
+     
+    /* Header */
+    .nav-logo
+    {
+        font-size: 26px !important;
+    }
+
+    #show-menu-icon
+    {
+        font-size: 23px;
+    }
+
+    .nav-menu
+    {
+        width: 170px;
+        right: -170px;
+    }
+
+    /* Home */
+    .name-heading
+    {
+        font-size: 30px !important;
+    }
+
+    .role-heading
+    {
+        font-size: 28px !important;
+        margin-bottom: 30px;
+    }
+
+    .home .section-container p
+    {
+        margin-bottom: 70px;
+    }
+
+    /* Projects */
+    .projects .section-container
+    {
+        padding-top: 70px;
+        padding-bottom: 0px;
+    }
+
+    .project-container img
+    {
+        width: 68% !important;
+    }
+
+    /* Contact */
+    .contact-form-container
+    {
+        padding: 32px;
+    }
+
+    .input-group
+    {
+        width: 280px;
+    }
+
+    /* Footer */
+    .footer .name-heading
+    {
+        font-size: 24px !important;
+    }
+
+    .footer .role-heading
+    {
+        font-size: 15px !important;
+        padding-bottom: 16px;
+    }
+
+    .copyright-notice
+    {
+        max-width: 75%;
+    }   
 }
