--- a/styles/contact.css
+++ b/styles/contact.css
@@ -14,20 +14,11 @@
     margin: auto;
 }
 
-.contact-grid
-{
-    display: grid;
-    grid-template-columns: 270px 700px;
-}
-
-.contact-grid img
-{
-    background-color: black;
-}
-
 .contact-form-container
 {
+    width: 800px;
     background-color: white;
+    border-radius: 18px;
     padding: 60px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
@@ -36,7 +27,7 @@
 .input-group
 {
     position: relative;
-    margin-bottom: 34px;
+    margin-bottom: 38px;
 }
 
 input, textarea
@@ -44,6 +35,7 @@ input, textarea
     width: 100%;
     font-size: 15px;
     border: 1px solid rgba(25, 27, 19, 0.2);
+    border-radius: 10px;
     outline: none;
     resize: none;
     padding: 10px;
@@ -52,11 +44,12 @@ input, textarea
 .input-group label
 {
     height: 100%;
+    font-size: 15px;
     color: rgb(82, 82, 82);
     position: absolute;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 10px 14px;
     transition: 0.2s;
     cursor: text;
 }
