--- a/styles/global.css
+++ b/styles/global.css
@@ -26,10 +26,11 @@ a
 
 button
 {
-    font-size: 12px;
     color: white;
+    font-size: 12px;
     font-weight: 500;
     letter-spacing: 2px;
+    border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
     transition: 0.3s;
