--- a/styles/skills.css
+++ b/styles/skills.css
@@ -28,6 +28,7 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
+    border-radius: 14px;
     color: rgb(82, 82, 82);
     padding: 40px 60px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
@@ -41,9 +42,9 @@
     margin: -10px 0 10px 0;
 }
 
-.skills .skill-icon-container div p
+.skills .skill-icon-container label
 {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .skills .skill-icon-container div hr
