--- a/styles/contact.css
+++ b/styles/contact.css
@@ -14,11 +14,23 @@
     margin: auto;
 }
 
+.contact-grid
+{
+    display: grid;
+    grid-template-columns: 270px 700px;
+}
+
+.contact-info-container
+{
+    background-color: rgb(22, 164, 72);
+    border-radius: 10px;
+
+}
+
 .contact-form-container
 {
-    width: 800px;
     background-color: white;
-    border-radius: 18px;
+    border-radius: 10px;
     padding: 60px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
@@ -27,7 +39,7 @@
 .input-group
 {
     position: relative;
-    margin-bottom: 38px;
+    margin-bottom: 34px;
 }
 
 input, textarea
@@ -35,7 +47,7 @@ input, textarea
     width: 100%;
     font-size: 15px;
     border: 1px solid rgba(25, 27, 19, 0.2);
-    border-radius: 10px;
+    border-radius: 8px;
     outline: none;
     resize: none;
     padding: 10px;
