--- a/styles/about.css
+++ b/styles/about.css
@@ -28,7 +28,7 @@
     margin-bottom: 50px;
 }
 
-.linkedin-button
+.linkedin-btn
 {
     background-color: rgb(22, 164, 72);
     border: 1px solid rgb(22, 164, 72);
