--- a/styles/home.css
+++ b/styles/home.css
@@ -57,14 +57,14 @@
     margin-bottom: 50px;
 }
 
-.contact-me-button
+.contact-me-btn
 {
     background-color: rgb(22, 164, 72);
     border: 1px solid rgb(22, 164, 72);
     margin-right: 20px;
 }
 
-.resume-button
+.resume-btn
 {
     background-color: black;
     border: 1px solid white;
