--- a/styles/projects.css
+++ b/styles/projects.css
@@ -76,15 +76,15 @@
     width: 135px;
 }
 
-.view-live-button,
-.home-button
+.view-live-btn,
+.home-btn
 {
     background-color: rgb(22, 164, 72);
     border: 1px solid rgb(22, 164, 72);
     margin-right: 20px;
 }
 
-.code-button
+.code-btn
 {
     background-color: black;
     border: 1px solid black;
