style: modify the style of home and about page

--- a/styles/global.css
+++ b/styles/global.css
@@ -90,3 +90,27 @@ nav .fa-sharp
 {
     display: none;
 }
+
+.home .section-container img,
+.about .section-container img
+{
+    animation: move 2.5s linear infinite;
+}
+
+@keyframes move
+{
+    0%
+    {
+        transform: translate(-15px, 0px);
+    }
+
+    50%
+    {
+        transform: translate(0px, -15px);
+    }  
+    
+    100%
+    {
+        transform: translate(-15px, 0px);
+    }  
+}
