feat!: implement contact form validation
Added client-side form validation for the contact form fields to ensure proper input. Added error messages for invalid inputs and success styling for valid inputs. The form cannot be submitted until all fields are filled correctly.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -17,7 +17,7 @@
 .contact-grid
 {
     display: grid;
-    grid-template-columns: 270px 700px;
+    grid-template-columns: 240px 750px;
     gap: 20px;
 }
 
@@ -25,7 +25,6 @@
 {
     background-color: black;
     border-radius: 10px;
-
 }
 
 .contact-form-container
@@ -37,10 +36,18 @@
     rgba(0, 0, 0, 0.06) 0 2px 4px -1px;
 }
 
-.input-group
+.form-field
 {
     position: relative;
-    margin-bottom: 34px;
+    margin-bottom: 40px;
+}
+
+.form-field label
+{
+    font-size: 15px;
+    color: rgb(82, 82, 82);
+    display: block;
+    padding-bottom: 5px;
 }
 
 input, textarea
@@ -54,57 +61,55 @@ input, textarea
     padding: 10px;
 }
 
-.input-group label
-{
-    height: 100%;
-    font-size: 15px;
-    color: rgb(82, 82, 82);
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 14px;
-    transition: 0.2s;
-    cursor: text;
-}
-
-.input-group label {
-    height: 100%;
-    font-size: 15px;
-    color: rgb(82, 82, 82);
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 14px;
-    transition: 0.2s;
-}
-
-input:focus~label,
-input:valid~label,
-textarea:focus~label,
-textarea:valid~label
-{
-    font-size: 12px;
-    top: -35px;
-}
-
 .name-email-row
 {
     display: flex;
     justify-content: space-between;
 }
 
-.name-email-row .input-group
+.name-email-row .form-field
 {
     flex-basis: 48%;
 }
 
-#emailErrorMessage
+.form-field small
 {
-    font-size: 14px;
-    color: red;
-    top: 100%;
-    left: 2px;
+	color: #e74c3c;
+	bottom: -25px;
+    left: 0;
+	visibility: hidden;
+	position: absolute;
+}
+
+.form-field.error small
+{
+	visibility: visible;
+}
+
+.form-field.error input,
+.error textarea
+{
+    border-color: #e74c3c;
+}
+
+.form-field.success input,
+.success textarea
+{
+	border-color: #2ecc71;
+}
+
+.message-field-error-message
+{
+    top: 216px;
+}
+
+.message-field-char-counter
+{
+    font-size: 15px;
+    color: rgb(82, 82, 82);
     position: absolute;
+    bottom: -20px;
+    right: 0;
 }
 
 .form-submit-btn
@@ -113,31 +118,9 @@ textarea:valid~label
     border: 1px solid rgb(22, 164, 72);
 }
 
-.char-counter
-{
-    display: flex;
-    justify-content: flex-end;
-    font-size: 15px;
-    padding-top: 10px;
-}
-
-.active .char-counter
-{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.error textarea
-{
-    border-color: #ea4020;
-}
-
 .form-submit-message
 {
-    margin-bottom: 16px;
-}
-
-.char-counter
-{
+    font-size: 15px;
     color: rgb(82, 82, 82);
+    margin-bottom: 16px;
 }
